fixin bottom spacing after removing help text

--- a/css/main.css
+++ b/css/main.css
@@ -981,10 +981,3 @@ h3.content-title {
 .participate p.participate-theaser {
   text-align: center;
 }
-.participate p.participate-theaser--bottom {
-  padding-bottom: 36px
-}
-
-.participate section.content {
-  padding-bottom: 6px;
-}
